// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web3 reducer account 1`] = `
Object {
  "account": "test",
  "ethBalance": Object {
    "allowance": 0,
    "eth": 0,
    "weth": 0,
  },
  "network": 0,
  "tokenBalances": Object {},
}
`;

exports[`web3 reducer default 1`] = `
Object {
  "account": "0x0000000000000000000000000000000000000000",
  "ethBalance": Object {
    "allowance": 0,
    "eth": 0,
    "weth": 0,
  },
  "network": 0,
  "tokenBalances": Object {},
}
`;

exports[`web3 reducer ethBalance 1`] = `
Object {
  "account": "test",
  "ethBalance": Object {
    "allowance": 789,
    "eth": 123,
    "weth": 456,
  },
  "network": 123,
  "tokenBalances": Object {},
}
`;

exports[`web3 reducer network 1`] = `
Object {
  "account": "test",
  "ethBalance": Object {
    "allowance": 0,
    "eth": 0,
    "weth": 0,
  },
  "network": 123,
  "tokenBalances": Object {},
}
`;

exports[`web3 reducer tokenBalance 1`] = `
Object {
  "account": "test",
  "ethBalance": Object {
    "allowance": 789,
    "eth": 123,
    "weth": 456,
  },
  "network": 123,
  "tokenBalances": Object {
    "code": Object {
      "allowance": 789,
      "balance": 123,
      "custodian": "custodian",
    },
  },
}
`;
